# simple-syslog-python

./: .flake8  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  README.md  generate.sh.local  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
simple_syslog/: __init__.py  builder.py  data.py  exceptions.py  keys.py  listener.py  policy.py  specification.py
tests/: __init__.py  conftest.py  test_3164_listener.py  test_5424_listener.py  test_simple_syslog.py
tests/resources/logs/3164/: many_ise.txt
tests/resources/logs/5424/: log_missing_structure.txt  log_utf8_umlauts.txt  log_with_bom.txt
