[tool.poetry]
name = "simple-syslog"
version = "0.1.0"
license = "Apache-2.0"
description = "A python 3 library for parsing valid RFC 5324 and RFC 3164 syslog"
authors = ["Otto Fowler <ottobackwards@gmail.com>"]
maintainers = ["palindromicity <github.palindromicity@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/palindromicity/simple-syslog-python"
repository = "https://github.com/palindromicity/simple-syslog-python"
keywords = ["syslog", "RFC 5424", "RFC 3164", "simple-syslog"]

[tool.poetry.urls]
issues = "https://github.com/palindromicity/simple-syslog-python/issues"

[tool.coverage.paths]
source = ["simple_syslog", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["simple_syslog"]

[tool.coverage.report]
show_missing = true

#[tool.coverage.report]
#fail_under = 100

[tool.poetry.dependencies]
python = "^3.8"
antlr4-python3-runtime = "^4.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
